# Template

./: CMakeLists.txt
Template/: CMakeLists.txt
Template/include/: Header.hpp
Template/source/: Source.cpp  Template.cpp
Template/tests/: CMakeLists.txt  test.cpp
